template padrão não editado

--- a/src/template.html
+++ b/src/template.html
@@ -1,12 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zucco Transportes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="/img/logos/favicon_io/favicon-16x16.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg" id="nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img id="" src="img\logos\zucco-removebg-preview.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" data-bs-toggle="collapse" data-bs-target="#nav-text" aria-controls="#nav-text" aria-expanded="false">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="nav-text" class="navbar-collapse collapse justify-content-end">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Sobre nos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Servicos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Onde estamos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Trabalhe conosco</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Cidades atendidas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+                        <form class="d-flex" role="search">
+                            <input class="form-control" type="search" placeholder="Procurar" aria-label="Search">
+                        </form>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- Cada página vai ter pelo menos uma section -->
+        <section>
+            <!-- Apagar essa parte -->
+            <h1>As logos estão na pasta img em varios tamanhos</h1>
+            <h1>Tipografia</h1>
+            <h1>Exemplo de título 1</h1>
+            <h2>Exemplo de título 2</h2>
+            <h3>Exemplo de título 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea rerum ratione hic cupiditate, quam voluptates ipsum unde maiores velit accusantium fuga porro, consequuntur reprehenderit inventore beatae officiis quasi dolorem corporis. Non totam illo odit, earum quia vitae enim nam molestias facilis tempore ad. Ex libero dolore enim vel nemo, exercitationem similique? Autem, magnam quam quas repudiandae minus magni nam quasi vero deleniti velit facilis reiciendis ducimus enim dolorem aut, qui doloribus mollitia. Distinctio ullam repellat, ratione non ut est! Dolorum necessitatibus repellat quis repellendus! Numquam, quae distinctio! Officiis sapiente culpa, eius, voluptatem veniam illo accusantium saepe, deleniti at recusandae aspernatur!</p>
+            <h1>Paleta de cores:</h1>
+            <div id="paleta">
+                <div>
+                    <p>Cinza forte</p>
+                    <div class="cores" id="cinza-forte"></div>
+                </div>
+                <div>
+                    <p>VERMELHO ESCURO</p>
+                    <div class="cores" id="vermelho-escuro"></div>
+                </div>
+                <div>
+                    <p>VERMELHO</p>
+                    <div class="cores" id="vermelho"></div>
+                </div>
+                <div>
+                    <p>PRETO</p>
+                    <div class="cores" id="preto"></div>
+                </div>
+                <div>
+                    <p>Cinza</p>
+                    <div class="cores" id="cinza"></div>
+                </div>
+            </div>
+            <h1>Iconografia (Alguns exemplos vamos usar a do bootstrap)</h1>
+            <div class="iconografia">
+                <img src="img/Captura de tela 2023-04-26 141103.png" alt="">
+                <img src="img/Captura de tela 2023-04-26 141516.png" alt="">
+                <img src="img/Captura de tela 2023-04-26 141311.png" alt="">
+            </div>
+        </section>
+    </main>
+    <div class="container text-center -text-md-left">
+        <div class="row mx-auto">
+            <div class="ps-2 pe-2 pb-4 col-xxl-4 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <h5 class="pb-2">Links Rápidos</h5>
+                <ul class="text-start" style="list-style: none;">
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Shipping policy</a></li>
+                    <li><a href="#">Cancelation & Returns</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="#">Disclaimer</a></li>
+                </ul>
+            </div>
+            <div class="ps-2 pe-2 pb-4 col-xxl-4 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <h5 class="pb-2">Contatos</h5>
+                <li><a href="#">Rua das empreas- Bairro bairrinho</a></li>
+                <li><a href="#">email@empresa.com</a></li>
+                <li><a href="#">00 0000-0000</a></li>
+                <li><a href="#">00 0000-0000</a></li>
+
+            </div>
+            <div class="card mb-3" style="width: 18rem;">
+                <div class="card-body mx-auto">
+                    <h5 class="card-title fs-6">Inscreva-se para receber promoções!</h5>
+                    <div class="d-flex"> 
+                        <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Nome">
+                        <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Sobrenome">      
+                                </div>                                          
+                    <form>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Mensagem">
+                        </div>
+                        <button type="submit" class="btn btn-outline-primary">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 mt-2 border-top border-emphasis">
+                <h6 class="pt-2">© 2019-2023 portaldosgames.com.br</h6>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>© 2009-2023 Zucco</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
