Finalizando tela trabalhe conosco

--- a/TrabalheConosco/index.html
+++ b/TrabalheConosco/index.html
@@ -79,11 +79,47 @@
         </nav>
     </header>
 
+    <figure class="text-center">
+        <h1><b>Trabalhe Conosco</b></h1>
+        <!--TODAS AS PAGS-->
+    </figure>
+    
     <main>
-        <figure class="text-center">
-            <h1><b>Título da Página</b></h1>
-            <!--TODAS AS PAGS-->
-        </figure>
+        <div class="card_queroTrabalhar">
+            <div class="content">
+                <h3 class="centered">Quero trabalhar como:</h3>
+                <div class="form-1check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <label class="form-check-label" for="exampleRadios1">
+                      Motorista de caminhão
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <label class="form-check-label" for="exampleRadios2">
+                      Estoquista
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                    <label class="form-check-label" for="exampleRadios2">
+                      Auxiliar administrativo 
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="option4">
+                    <label class="form-check-label" for="exampleRadios2">
+                      Motorista
+                    </label>
+                  </div>
+                  <h5 class="centered-1">Qual seu diferencial?</h5>
+                  <div class="mb-3"> 
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                  </div>
+                  <button id="button_captcha" class="centered"><h3><b>Captcha</b></h3></button>
+                  <p><button id="button_enviar" class="centered"><h5><b>Enviar</b></h5></button></p>
+            </div>
+        </div>
 
     </main>
 
