--- a/src/sobreNos.html
+++ b/src/sobreNos.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sobre nós</a>
+                <a class="nav-link" href="sobreNos.html">Sobre nós</a>
               </li>
 
               <li class="nav-item dropdown">
@@ -83,7 +83,7 @@
       <h1><b>Sobre Nós</b></h1>
       <!--TODAS AS PAGS-->
     </figure>
-    <div class="container  mx-auto">
+    <div class="container mx-auto">
       <div class="row justify-content-center">
         <div class="col-xxl-10 my-3">
           <h5 class="fs-5 text-center">
