Atualizações na tela Sobre Nós

--- a/src/sobreNos.html
+++ b/src/sobreNos.html
@@ -146,11 +146,23 @@
         <div class="row mt-3">
           <div class="col-xxl-10">
             <h5 class="badge bg-body-secondary fs-5 text-dark shadow px-3 py-2">Nossos valores</h5>
-            <p class="pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta exercitationem aliquid accusamus similique necessitatibus quia, amet magnam expedita asperiores, consectetur recusandae ipsam repellat reprehenderit sit suscipit enim libero explicabo!</p>
+            <p class="pt-2 ps-4">Ética, liderança, cooperação, compromisso, integridade e inovação para alcançar resultados.</p>
             <h5 class="badge bg-body-secondary fs-5 text-dark shadow px-3 py-2">Área de atuação</h5>
-            <p class="pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aperiam possimus provident explicabo sed harum inventore sit amet commodi culpa totam molestias quidem a corporis suscipit incidunt aliquid, placeat autem!</p>
+            <h5 class="fs-6 pt-3 fst-italic ps-4">Região de atendimento:</h5>
+            <p class="pt-2 ps-4">Atendemos as regiões sul, sudeste, nordeste e centro-oeste do país. Contamos com uma infraestrutura pronta para efetuar a entrega satisfatória aos nossos clientes. Abrangemos uma frota rastreada e oferecemos prazos diferenciados, segurança e informação para sua mercadoria desde a coleta até a entrega.</p>
+            <h5 class="fs-6 pt-2 fst-italic ps-4">Carga Fechada e Completa: </h5>
+            <p class="pt-2 ps-4">Neste processo, atendemos grandes demandas de envios. Caracteriza-se pela ocupação total do veículo em quilos/cubagem. Desta forma adequando um veículo inteiro para suprir a necessidade do cliente tendo como principal vantagem: o prazo de entrega, exclusividade e segurança.</p>
+            <h5 class="fs-6 pt-2 fst-italic ps-4">Carga Fracionada: </h5>
+            <p class="pt-2 ps-4">Para este segmento, comportamos pequenos volumes mantendo todos os cuidados e respeitando a particularidade de cada produto e as necessidades de cada cliente. Sendo pago somente pelo espaço utilizado no caminhão, e nós realizamos toda a entrega.</p>
+
             <h5 class="badge bg-body-secondary fs-5 text-dark shadow px-3 py-2">Diferencial</h5>
-            <p class="pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste autem nisi nobis laboriosam fugit fuga similique, voluptates pariatur unde assumenda dolor voluptas laborum facilis deserunt corporis tempore culpa blanditiis harum.</p>
+            <ul class="pt-3">
+              <li style="font-size: 14px">Entender as necessidades de cada cliente, analisando suas particularidades;</li>
+              <li style="font-size: 14px">Transportar todos os produtos com agilidade, segurança e compromisso;</li>
+              <li style="font-size: 14px">Satisfação e fidelização de nossos clientes;</li>
+              <li style="font-size: 14px">Contínuo aprimoramento de nossos processos;</li>
+              <li style="font-size: 14px">Pontualidade nas entregas.</li>
+            </ul>
 
           </div>
         </div>
