--- a/src/sobreNos.html
+++ b/src/sobreNos.html
@@ -80,10 +80,10 @@
   </header>
   <main>
     <figure class="text-center">
-      <h1 id="sobreZucco"><b>Sobre Nós</b></h1>
+      <h1 id="sobreZucco" class="mt-5">Sobre Nós</h1>
       <!--TODAS AS PAGS-->
     </figure>
-    
+
     <div class="container-fluid">
       <!--HOME, SOBRE NÓS-->
       <div class="col-auto pt-3 ">
@@ -98,27 +98,33 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img style="width: 1280px; height: 800px;" src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg" class="d-block w-100"
+              <img style="width: 1280px; height: 800px;"
+                src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class=" fs-5 text-white">Zucco Transportes</h5>
-                <p class=" fs-5 text-white">A Zucco Transportes é uma empresa familiar que foi fundada em janeiro de 2009, na cidade de Farroupilha-RS.</p>
+                <p class=" fs-5 text-white">A Zucco Transportes é uma empresa familiar que foi fundada em janeiro de
+                  2009, na cidade de Farroupilha-RS.</p>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img style="width: 1280px; height: 800px;" src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg" class="d-block w-100"
+              <img style="width: 1280px; height: 800px;"
+                src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class=" fs-5 text-white">Nossas Instalações</h5>
-                <p class=" fs-5 text-white">Contamos com estruturas em Flores da Cunha - RS e Contagem - MG, totalmente equipadas e prontas para atender as demandas.</p>
+                <p class=" fs-5 text-white">Contamos com estruturas em Flores da Cunha - RS e Contagem - MG, totalmente
+                  equipadas e prontas para atender as demandas.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img style="width: 1280px; height: 800px;" src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
+              <img style="width: 1280px; height: 800px;"
+                src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class=" fs-5 text-white">Nossas Missão</h5>
-                <p class=" fs-5 text-white">Oferecer serviços de logística e transporte de produtos com transparência e responsabilidade.</p>
+                <p class=" fs-5 text-white">Oferecer serviços de logística e transporte de produtos com transparência e
+                  responsabilidade.</p>
               </div>
             </div>
           </div>
@@ -138,18 +144,28 @@
         <div class="row mt-5">
           <div class="col-xxl-10">
             <h5 class="badge bg-body-secondary fs-5 text-dark shadow px-3 py-2">Nossos valores</h5>
-            <p class="pb-4 ps-4" style="font-size: 15px">Ética, liderança, cooperação, compromisso, integridade e inovação para alcançar resultados.</p>
+            <p class="pb-4 ps-4" style="font-size: 15px">Ética, liderança, cooperação, compromisso, integridade e
+              inovação para alcançar resultados.</p>
             <h5 class="badge bg-body-secondary fs-5 text-dark shadow px-3 py-2">Área de atuação</h5>
             <h5 class="fs-6 fst-italic ps-4">Região de atendimento:</h5>
-            <p class="pb-4 ps-4" style="font-size: 15px">Atendemos as regiões sul, sudeste, nordeste e centro-oeste do país. Contamos com uma infraestrutura pronta para efetuar a entrega satisfatória aos nossos clientes. Abrangemos uma frota rastreada e oferecemos prazos diferenciados, segurança e informação para sua mercadoria desde a coleta até a entrega.</p>
+            <p class="pb-4 ps-4" style="font-size: 15px">Atendemos as regiões sul, sudeste, nordeste e centro-oeste do
+              país. Contamos com uma infraestrutura pronta para efetuar a entrega satisfatória aos nossos clientes.
+              Abrangemos uma frota rastreada e oferecemos prazos diferenciados, segurança e informação para sua
+              mercadoria desde a coleta até a entrega.</p>
             <h5 class="fs-6 fst-italic ps-4">Carga Fechada e Completa: </h5>
-            <p class="pb-4 ps-4" style="font-size: 15px" >Neste processo, atendemos grandes demandas de envios. Caracteriza-se pela ocupação total do veículo em quilos/cubagem. Desta forma adequando um veículo inteiro para suprir a necessidade do cliente tendo como principal vantagem: o prazo de entrega, exclusividade e segurança.</p>
+            <p class="pb-4 ps-4" style="font-size: 15px">Neste processo, atendemos grandes demandas de envios.
+              Caracteriza-se pela ocupação total do veículo em quilos/cubagem. Desta forma adequando um veículo inteiro
+              para suprir a necessidade do cliente tendo como principal vantagem: o prazo de entrega, exclusividade e
+              segurança.</p>
             <h5 class="fs-6 fst-italic ps-4">Carga Fracionada: </h5>
-            <p class="pb-4 ps-4" style="font-size: 15px">Para este segmento, comportamos pequenos volumes mantendo todos os cuidados e respeitando a particularidade de cada produto e as necessidades de cada cliente. Sendo pago somente pelo espaço utilizado no caminhão, e nós realizamos toda a entrega.</p>
+            <p class="pb-4 ps-4" style="font-size: 15px">Para este segmento, comportamos pequenos volumes mantendo todos
+              os cuidados e respeitando a particularidade de cada produto e as necessidades de cada cliente. Sendo pago
+              somente pelo espaço utilizado no caminhão, e nós realizamos toda a entrega.</p>
 
             <h5 class="badge bg-body-secondary fs-5 text-dark shadow px-3 py-2">Diferencial</h5>
             <ul class="pt-1 ps-5 mb-5">
-              <li style="font-size: 15px">Entender as necessidades de cada cliente, analisando suas particularidades;</li>
+              <li style="font-size: 15px">Entender as necessidades de cada cliente, analisando suas particularidades;
+              </li>
               <li style="font-size: 15px">Transportar todos os produtos com agilidade, segurança e compromisso;</li>
               <li style="font-size: 15px">Satisfação e fidelização de nossos clientes;</li>
               <li style="font-size: 15px">Contínuo aprimoramento de nossos processos;</li>
