Alteraçoes tela trabalhe conosco

--- a/src/trabalheConosco.html
+++ b/src/trabalheConosco.html
@@ -79,8 +79,8 @@
         </nav>
     </header>
 
-    <figure class="text-center">
-        <h1><b>Trabalhe Conosco</b></h1>
+    <figure class="text-center mt-3">
+        <h1>Trabalhe Conosco</h1>
         <!--TODAS AS PAGS-->
     </figure>
     
@@ -117,8 +117,8 @@
                       <div class="mb-3"> 
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                       </div>
-                      <button id="button_captcha" class="centered"><h3><b>Captcha</b></h3></button>
-                      <p><button id="button_enviar" class="centered"><h5><b>Enviar</b></h5></button></p>
+                      <button id="button_captcha" class="centered"><h3>Captcha</h3></button>
+                      <p><button id="button_enviar" class="centered"><h5>Enviar</h5></button></p>
                 </div>
             </div>
     
