--- a/src/cidades atendidas.html
+++ b/src/cidades atendidas.html
@@ -34,10 +34,10 @@
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
                           <div class="accordion-body">
                             <div class="d-grid gap-2">
-                              <button class="btn btn-light" type="button">Estado 1</button>
-                              <button class="btn btn-light" type="button">Estado 2</button>
-                              <button class="btn btn-light" type="button">Estado 3</button>
-                              <button class="btn btn-light" type="button">Estado 4</button>
+                              <button class="btn btn-light" type="button">São Paulo</button>
+                              <button class="btn btn-light" type="button">Minas Gerais</button>
+                              <button class="btn btn-light" type="button">Santa Catarina</button>
+                              <button class="btn btn-light" type="button">Paraná</button>
                             </div>
                           </div>
                         </div>
@@ -56,10 +56,10 @@
                         <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
                           <div class="accordion-body">
                             <div class="d-grid gap-2">
-                              <button class="btn btn-light" type="button"> Região 1</button>
-                              <button class="btn btn-light" type="button">Região 2</button>
-                              <button class="btn btn-light" type="button">Região 3</button>
-                              <button class="btn btn-light" type="button">Região 4</button>
+                              <button class="btn btn-light" type="button">Região Metropolitana</button>
+                              <button class="btn btn-light" type="button">Região Norte</button>
+                              <button class="btn btn-light" type="button">Região Sul</button>
+                              <button class="btn btn-light" type="button">Interior do estado</button>
                             </div>
                           </div>
                         </div>
