--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
-                    <a class="navbar-brand me-5" href="#"><img id="" src="zucco-removebg-preview.png" alt=""></a>
+                    <a class="navbar-brand me-5" href="#"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
                             </li>
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                <a class="nav-link dropdown-toggle" href="servicos" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     Serviços
                                 </a>
@@ -62,13 +62,13 @@
                                 <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="trabalhe.html">Trabalhe conosco</a>
+                                <a class="nav-link" href="trabalheconosco.html">Trabalhe conosco</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="cidades.html">Cidades atendidas</a>
+                                <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-5" href="#">Contato</a>
+                                <a class="nav-link me-5" href="contato.html">Contato</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
