--- a/src/sobrenos.html
+++ b/src/sobrenos.html
@@ -87,7 +87,7 @@
     <div class="container-fluid">
       <!--HOME, SOBRE NÓS-->
       <div class="col-auto pt-3 ">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide carousel-16-9">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -98,7 +98,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img style="width: 1280px; height: 800px;"
+              <img 
                 src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img style="width: 1280px; height: 800px;"
+              <img 
                 src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
@@ -118,7 +118,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img style="width: 1280px; height: 800px;"
+              <img 
                 src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
