--- a/src/sobrenos.html
+++ b/src/sobrenos.html
@@ -19,11 +19,10 @@
 
   <!--CABEÇALHO-->
   <header>
-
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-xxl">
       <nav class="navbar fixed-top" style="background-color: #b22222;">
         <div class="container-fluid">
-          <a class="navbar-brand me-5" href="#"><img id="" src="img\logos\zucco-removebg-preview.png" alt=""></a>
+          <a class="navbar-brand me-5" href="#"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -33,14 +32,14 @@
 
             <ul class="navbar-nav me-auto  mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="sobreNos.html">Sobre nós</a>
+                <a class="nav-link" href="sobrenos.html">Sobre nós</a>
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" href="servicos" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Serviços
                 </a>
@@ -52,21 +51,23 @@
                   <li>
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="#">Recebimento e Armazenagem de Carga</a></li>
-                  <li><a class="dropdown-item" href="#">Inspeção, Expedição e Distribuição</a></li>
+                  <li><a class="dropdown-item" href="#">Recebimento e Armazenagem de Carga</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Inspeção, Expedição e Distribuição</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Onde Estamos</a>
+                <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Trabalhe conosco</a>
+                <a class="nav-link" href="trabalheconosco.html">Trabalhe conosco</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cidades atendidas</a>
+                <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Contato</a>
+                <a class="nav-link me-5" href="contato.html">Contato</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -98,9 +99,8 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img 
-                src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg" class="d-block w-100"
-                alt="...">
+              <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg"
+                class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class=" fs-5 text-white">Zucco Transportes</h5>
                 <p class=" fs-5 text-white">A Zucco Transportes é uma empresa familiar que foi fundada em janeiro de
@@ -108,9 +108,8 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img 
-                src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg" class="d-block w-100"
-                alt="...">
+              <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg"
+                class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class=" fs-5 text-white">Nossas Instalações</h5>
                 <p class=" fs-5 text-white">Contamos com estruturas em Flores da Cunha - RS e Contagem - MG, totalmente
@@ -118,8 +117,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img 
-                src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
+              <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
                 alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class=" fs-5 text-white">Nossas Missão</h5>
@@ -175,7 +173,7 @@
           </div>
         </div>
       </div>
-    </div>  
+    </div>
   </main>
 
 
