--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -81,7 +81,7 @@
         <div class="container-formulario">
          <div id="form_servicos">
             <div class="form-image1">
-                <img src="/assets/imagens/undraw_interview_re_e5jn (1).svg">
+                <img src="/src/img/imagens serviços e form serviços/undraw_interview_re_e5jn (1).svg">
             </div>
             <form action="#"> <!--precisa do back end-->
                 <div id="eba" class="input-group">
