--- a/src/index.html
+++ b/src/index.html
@@ -186,9 +186,7 @@
                             <img src="img\cotacao.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Cotação de Fretes</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte.</p>
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Saiba mais</a></button>
@@ -200,12 +198,10 @@
                             <img src="img/coletas_de_mercadorias.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Coleta de Mercadorias</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to
-                                    additional
-                                    content.</p>
+                                <p class="card-text">O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido. Economize tempo e custos, solicite sua cotação!</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger">Saiba mais</button>
+                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -214,16 +210,12 @@
                         <div class="card text-center h-100">
                             <img src="img/carga_fechada.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Transportes de Cargas Fracionadas</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This card has even longer content than the first to show
-                                    that
-                                    equal
-                                    height action.</p>
+                                <h5 class="card-title">Transportes de Cargas</h5>
+                                <p class="card-text">Distribuição de cargas completas/fechadas ou fracionadas exige estudos específicos da logística em todas as etapas da viagem. Um parceiro experiente faz toda diferença no seu planejamento logístico.
+                                    Economize tempo e custos, solicite sua cotação!</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger">Saiba mais</button>
+                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -232,7 +224,7 @@
                         <div class="card text-center h-100">
                             <img src="img/maisinfo.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title mt-5">Clique aqui para mais Informações sobre Serviços</h5>
+                                <h5 class="card-title mt-5">Clique aqui para mais informações sobre serviços oferecidos</h5>
                                 <br>
                             </div>
                             <div class="card-footer">
