botão de cotação

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                                 <p class="card-text">Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte.</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Solicitar cotação</a></button>
                             </div>
                         </div>
                     </div>
