--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                                 <p class="card-text">Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte.</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Solicitar cotação</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Solicitar cotação</a></button>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                 <p class="card-text">O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido. Economize tempo e custos, solicite sua cotação!</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                                     Economize tempo e custos, solicite sua cotação!</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                                 <br>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a href="servicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="servicos.html" target="_blank">Saiba mais</a></button>
                             </div>
 
                         </div>
