alteração nos cards da home

--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Cotação de Fretes</h5>
                                 <p class="card-text">Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte.</p>
+                                <p class="card-text"> Economize tempo e custos, solicite sua cotação!</p>
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Solicitar cotação</a></button>
@@ -198,7 +199,8 @@
                             <img src="img/coletas_de_mercadorias.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Coleta de Mercadorias</h5>
-                                <p class="card-text">O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido. Economize tempo e custos, solicite sua cotação!</p>
+                                <p class="card-text">O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido.</p>
+                                
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
@@ -211,8 +213,9 @@
                             <img src="img/carga_fechada.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Transportes de Cargas</h5>
-                                <p class="card-text">Distribuição de cargas completas/fechadas ou fracionadas exige estudos específicos da logística em todas as etapas da viagem. Um parceiro experiente faz toda diferença no seu planejamento logístico.
-                                    Economize tempo e custos, solicite sua cotação!</p>
+                                <p class="card-text">Distribuição de cargas fechadas ou fracionadas exige estudos específicos da logística em todas as etapas da viagem.</p>
+                                <p class="card-text"> Um parceiro experiente faz toda diferença no seu planejamento logístico! </p>
+                                
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
