Editado header e alteração onde estamos

--- a/src/index.html
+++ b/src/index.html
@@ -39,24 +39,8 @@
                                 <a class="nav-link" href="sobrenos.html">Sobre nós</a>
                             </li>
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="servicos" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Serviços
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Cotação de Fretes</a></li>
-                                    <li><a class="dropdown-item" href="#">Coletas de Mercadorias</a></li>
-                                    <li><a class="dropdown-item" href="#">Transporte de Cargas Fracionadas</a></li>
-                                    <li><a class="dropdown-item" href="#">Transporte de Cargas Fechadas</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Recebimento e Armazenagem de Carga</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Inspeção, Expedição e Distribuição</a>
-                                    </li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="servicos.html">servicos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
