--- a/src/ondeestamos.html
+++ b/src/ondeestamos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zucco Transportes</title>
-    <link rel="icon" href="img/zucco-removebg-preview.png">
+    <link rel="icon" href="zucco-removebg-preview.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -31,42 +31,26 @@
 
                         <ul class="navbar-nav me-auto  mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sobre nós</a>
+                                <a class="nav-link" href="sobrenos.html">Sobre nós</a>
                             </li>
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Serviços
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Cotação de Fretes</a></li>
-                                    <li><a class="dropdown-item" href="#">Coletas de Mercadorias</a></li>
-                                    <li><a class="dropdown-item" href="#">Transporte de Cargas Fracionadas</a></li>
-                                    <li><a class="dropdown-item" href="#">Transporte de Cargas Fechadas</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Recebimento e Armazenagem de Carga</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Inspeção, Expedição e Distribuição</a>
-                                    </li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="servicos.html">Serviços</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Onde Estamos</a>
+                                <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Trabalhe conosco</a>
+                                <a class="nav-link" href="trabalheconosco.html">Trabalhe conosco</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Cidades atendidas</a>
+                                <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-5" href="#">Contato</a>
+                                <a class="nav-link me-5" href="contato.html">Contato</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
@@ -81,19 +65,22 @@
 
     <main>
         <figure class="text-center mt-3">
-            <h1>Onde Estamos</h1> <!--TODAS AS PAGS-->
+            <h1>Onde Estamos</h1>
+            <!--TODAS AS PAGS-->
         </figure>
 
-        <div class="container mt-5">
+        <div class="container-fluid mt-5">
             <div class="row">
-                <div class="col-lg-10 col-md-10 col-sm-6">
+                <div class="col-lg-10 col-md-10 col-sm-12 text-center">
                     <h4>Contamos com estruturas em Flores da
                         Cunha - RS e Contagem - MG, totalmente
                         equipadas e prontas para atender as
                         demandas.</h4>
-                    <h4>Possuímos infraestrutura pronta para efetuar coleta, fracionamento e entrega satisfatória e
+                    <h4>Possuímos infraestrutura pronta para efetuar coleta, fracionamento e entrega
+                        satisfatória e
                         pontual. </h4>
-                    <h4>Contamos com equipamentos e ferramentas adequados para o transporte e armazenamento de
+                    <h4>Contamos com equipamentos e ferramentas adequados para o transporte e
+                        armazenamento de
                         mercadorias e cargas.</h4>
                     <h4>Temos frota própria, com veículos 100% rastreados e segurados.</h4>
                 </div>
@@ -107,21 +94,22 @@
 
         <div class="container">
             <div class="col-6">
-                <h2 class="text-center mt-3">Sede</h2>
+                <h2 class="mt-3">Sede</h2>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-sm-12 ">
+                <div class="col-lg-8 col-md-6 col-sm-6 ">
                     <iframe class="ms-5 pe-5"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3489.3312941160066!2d-51.207411523674665!3d-29.007180383957085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951e9bd5d5ef8def%3A0x1717cfdf2766038a!2sZucco%20Transportes!5e0!3m2!1sen!2sbr!4v1684454420969!5m2!1sen!2sbr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3489.3543064734763!2d-51.20749352367462!3d-29.00649888392636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951e9bd5d5ef8def%3A0x1717cfdf2766038a!2sZucco%20Transportes!5e0!3m2!1spt-BR!2sbr!4v1684965149899!5m2!1spt-BR!2sbr"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
-                <div class="col-lg-3 col-md-auto ms-5">
+                <div class="col-lg-3 col-md-6 col-sm-6 ms-5">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5>Endereço</h5>
-                            <h6>Estrada Gerardo Santin Guarese, S/N - Flores da Cunha - RS - 95270-000</h6>
+                            <h6>Estrada Gerardo Santin Guarese, S/N </h6>
+                            <h6>Flores da Cunha - RS - 95270-000</h6>
                             <h6>(54) 99676-2776 - 99971-7006</h6>
                         </div>
                     </div>
@@ -132,20 +120,21 @@
 
         <div class="container">
             <div class="col-6">
-                <h2 class="text-center mt-3">Filial</h2>
+                <h2 class=" mt-3">Filial</h2>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-sm-12 ">
+                <div class="col-lg-8 col-md-6 col-sm-6 ">
                     <iframe class="ms-5 pe-5"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1326.3553730203578!2d-44.05427845280629!3d-19.90334458769235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6957e3c54e713%3A0x6c07219685915e46!2sZucco%20Transportes%20Filial!5e0!3m2!1sen!2sbr!4v1683924710511!5m2!1sen!2sbr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.4981735149026!2d-44.056012223945594!3d-19.903401137482497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6957e3c54e713%3A0x6c07219685915e46!2sZucco%20Transportes%20Filial!5e0!3m2!1spt-BR!2sbr!4v1684965329052!5m2!1spt-BR!2sbr"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-lg-3 col-md-auto ms-5">
+                <div class="col-lg-3 col-md-6 col-sm-6 ms-5">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5>Endereço</h5>
-                            <h6>R. Um, 555 - Do Comercio, Contagem - MG - 32152-002</h6>
+                            <h6>R. Um, 555 - Do Comercio </h6>
+                            <h6>Contagem - MG - 32152-002</h6>
                             <h6>(54) 99676-2776 - 99971-7006</h6>
                         </div>
                     </div>
