--- a/src/servicos.html
+++ b/src/servicos.html
@@ -89,7 +89,7 @@
         <div class="icon">
             <img src="/src/img/cotacao.png" alt="">
         </div>
-        <div class="content">
+        <div class="conteudo">
             <h3 id="eba"><b>Cotação de Fretes</b></h3>
             <p>Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte. </p>
         </div>
@@ -103,7 +103,7 @@
         <div class="icon">
             <img src="/src/img/imagens serviços e form serviços/scaniaVermelho.jpg" alt="">
         </div>
-        <div class="content">
+        <div class="conteudo">
             <h3 id="eba"><b> Coletas de mercadorias</b></h3>
             <p>O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido.</p>
         </div>
@@ -117,7 +117,7 @@
         <div class="icon">
             <img src="/src/img/imagens serviços e form serviços/LOGISTICA.svg" alt="">
         </div>
-        <div class="content">
+        <div class="conteudo">
             <h3 id="eba"><b> Transporte de cargas fracionadas</b></h3>
             <p>  É um tipo de serviço no qual o embarcador paga somente pelo espaço no caminhão utilizado pela sua remessa.  </p>
         </div>
@@ -131,7 +131,7 @@
         <div class="icon">
             <img src="/src/img/imagens serviços e form serviços/caminhaoCinzaCargaFechada.jpg" alt="">
         </div>
-        <div class="content">
+        <div class="conteudo">
             <h3 id="eba"><b> Transporte de cargas fechadas</b></h3>
             <p>Esse tipo de serviço é ideal para entregas e remessas que irão percorrer grandes distâncias e que precisam de mais cuidados com a carga do que com o volume em si.</p>
         </div>
@@ -145,7 +145,7 @@
             <div class="icon">
                 <img src="/src/img/imagens serviços e form serviços/PHOTO-2022-08-03-11-55-27.jpg" alt="">
             </div>
-            <div class="content">
+            <div class="conteudo">
                 <h3 id="eba"><b> Armazenamento de cargas</b></h3>
                 <p> Após a coleta, a armazenagem trata da alocação da carga em um espaço físico, devidamente protegido e organizado.</p>
             </div>
@@ -159,7 +159,7 @@
         <div class="icon">
             <img src="/src/img/imagens serviços e form serviços/expedição.jpg" alt="">
         </div>
-        <div class="content">
+        <div class="conteudo">
             <h3 id="eba"><b> Inspeção, expedição e distribuição</b></h3>
             <p>Esta é a última etapa do operacional, e é onde há a conferência e o despacho da mercadoria para o destinatário.</p>
         </div>
